Initial update to use a common test base class in Storage tests